# qrtoolkit-core

./: .gitignore  MANIFEST.in  README.md  catalog-info.yaml  manage.py  mkdocs.yml  requirements-docs.txt  requirements.txt  setup.cfg
docs/: api.md  conf.py  getting_started.md  index.md  index.rst  installation.md  models.md  modes.md  theming.md
qrtoolkit_core/: admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  validators.py  views.py  viewsets.py
qrtoolkit_core/generator/: forms.py  qr.py  zip.py
qrtoolkit_core/migrations/: 0001_initial.py  0002_auto_20210202_1257.py  0003_department_users.py  0004_auto_20210512_0733.py  0005_remove_erronous_hits.py  0006_auto_20210614_1338.py  0007_auto_20210630_1417.py  0008_auto_20210630_1526.py  0009_linkurl_visible.py  0010_auto_20210929_1616.py  0011_auto_20220224_1533.py  0012_qrcode_kiosk_introduction.py  0013_auto_20220822_0754.py  0014_alter_apicall_id_alter_apihit_id_alter_department_id_and_more.py
qrtoolkit_core/static/qrtoolkit_core/css/: download.css  kiosk.css
qrtoolkit_core/static/qrtoolkit_core/fonts/: gent-icons.eot
qrtoolkit_core/static/qrtoolkit_core/js/: download.form.js  qr-code-scanner.min.js  qr-code-scanner.min.js.map
qrtoolkit_core/templates/admin/qrtoolkit_core/apicall/: change_form.html
qrtoolkit_core/templates/admin/qrtoolkit_core/qrcode/: search_form.html
qrtoolkit_core/templates/qrtoolkit_core/: layout.html
qrtoolkit_core/templates/qrtoolkit_core/apihit/: change_list.html
qrtoolkit_core/templates/qrtoolkit_core/qrcode/: change_list.html  code.html  code_list.html  download.html  index.html  kiosk.html  kiosk_call.html  scanner.html
