[metadata]
name = django-qr-toolkit-core
version = 2.6
description = A Django app to use qr-toolkit models
long_description = file: README.md
url = https://github.com/lab9k/qrtoolkit-core
author = Willems Jef
author_email = jef.willems@district09.gent
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
