[metadata]
name = django-qr-toolkit-core
version = 2.8
description = A Django app to use qr-toolkit models
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/lab9k/qrtoolkit-core
author = Willems Jef
author_email = jef.willems@district09.gent
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
install_requires =
    Django ==3.0.11
    djangorestframework ==3.12.2
    django-filter ==2.4.0
    bleach ==3.2.2
    segno ==1.3.3
    requests ==2.25.1
    django-reversion ==3.0.9
