[metadata]
name = django-qr-toolkit-core
version = 4.0.0
description = A Django app to use qr-toolkit models
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/lab9k/qrtoolkit-core
author = Willems Jef
author_email = jef.willems@district09.gent
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
install_requires =
    bleach ==5.0.1
    Django ==4.1.1
    django-filter ==22.1
    django-reversion ==5.0.2
    djangorestframework ==3.14.0
    requests ==2.28.1
    segno ==1.5.2
